<resources>
    <string name="app_name">AppOrderFood</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="nhapmatkhau">Mật khẩu</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="chungminhandan">Chứng minh nhân dân</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangky">Đăng ký</string>
    <string name="loinhaptendangnhap">Vui lòng nhập tên đăng nhập !</string>
    <string name="loinhapmatkhau">Vui lòng nhập mật khẩu !</string>
    <string name="themthanhcong">Thêm thành công !</string>
    <string name="themthatbai">Thêm thất bại !</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="dangnhapThanhCong">Đăng nhập thành công</string>
    <string name="dangnhapThatBai">Đăng nhập thất bại</string>
    <string name="trangchu">Trang Chủ</string>
    <string name="thucdon">Thực Đơn</string>
    <string name="banan">Bàn ăn</string>
    <string name="nhanvien">Nhân Viên</string>
    <string name="thongke">Thống Kê</string>
    <string name="caidat">Cài Đặt</string>
    <string name="mo">Mo</string>
    <string name="dong">Dong</string>
    <string name="thembanan">Them Ban an</string>
    <string name="tenbanan">Tên bàn ăn</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền</string>
    <string name="loaithucdon">Loại thực đơn</string>
    <string name="tenloai">Tên loại</string>
    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu</string>
    <string name="loithemmonan">Vui lòng nhập vào tên món ăn và giá tiền</string>
    <string name="soluong">Số Lượng</string>
    <string name="thanhtoan">Thanh Toán</string>
    <string name="tongtien">Tổng Tiền:</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="xoadulieu">Xóa thành công</string>
    <string name="Xoathatbai">Xoá thất bại</string>
    <string name="suadulieu">Sửa dữ liệu thành công</string>
    <string name="suathatbai">Sửa thất bại</string>
    <string name="themnhanvien">Thêm nhân viên</string>
    <string name="capnhatnhanvien">Cập nhật nhân viên</string>
</resources>
